--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -31,15 +31,15 @@
 		       <div class="row> 
                     <div class="form-group">
                         {{ form.oldpassword|add_class:'form-control' }} 
-                        <span class="help-block">{{ form.oldpassword.error }}</span>
+                        <span class="help-block bg-gradient-red">{{ form.errors.oldpassword }}</span>
                     </div>
                     <div class="form-group">
                         {{ form.password1|add_class:'form-control'}} 
-                        <span class="help-block">{{ form.password1.error }}</span>
+                        <span class="help-block">{{ form.errors.password1 }}</span>
                     </div>
                     <div class="form-group">
                         {{ form.password2|add_class:'form-control'}} 
-                        <span class="help-block">{{ form.password2.error }}</span>
+                        <span class="help-block">{{ form.errors.password2 }}</span>
                     </div>
 			        <button type="submit" name="action" class="btn btn-primary">{% trans "Envoyer" %}</button>
                 </div>
